Working out CSS bugs on iOS Safari

--- a/with-js/rtl-layout/styles/rtl-custom.css
+++ b/with-js/rtl-layout/styles/rtl-custom.css
@@ -284,7 +284,7 @@ p {
         margin-bottom: 0;
     }
     nav {
-        height: 9vh;
+        height: 64px;
     }
     .navbar-brand {
         position: absolute;
@@ -310,8 +310,8 @@ p {
         padding: calc(.7rem + 2.0vw) calc(1.25rem + 1.5vw);
     }
     #navHamburger svg {
-        width: calc(1.5em + 1.8vh);
-        height: calc(1.5em + 1.8vh);
+        width: 100%;
+        height: 100%;
     }
     footer {
         position: relative!important;
