--- a/with-js/rtl-layout/styles/rtl-explore.css
+++ b/with-js/rtl-layout/styles/rtl-explore.css
@@ -39,6 +39,45 @@ div.lazy {
     .list-group-item.mt-7 {
         margin-top: 0;
     }
+    #exploreModalWrapper {
+        flex-direction: column;
+    }
+    #exploreSection.w-80 {
+        width: 90%!important;
+    }
+    #exploreModalWrapper .col-4 {
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    #exploreModalWrapper .col-8 {
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    #actionModalMain {
+        text-align: center;
+    }
+    #actionModalBodyTags {
+        justify-content: center!important;
+    }
+    #actionModalShowReviews {
+        margin-top: .5rem!important;
+        margin-bottom: .5rem!important;
+    }
+    #actionModalReviews .row {
+        flex-direction: column;
+    }
+    #actionModalReviewsLeftPanel {
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    #actionModalReviewsRightPanel {
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
     #sideBar {
         width: 10%; /* slide out to 100% when arrow tapped */
         z-index: 2;
@@ -69,7 +108,7 @@ div.lazy {
         pointer-events: auto;
     }
     .fixed-top-left-sidebar {
-        top: 9vh!important;
+        top: 64px!important;
     }
     .list-group-item.mb-5 {
         margin-bottom: 9vh!important;
